--- a/cmpi-style.css
+++ b/cmpi-style.css
@@ -412,14 +412,14 @@ body{
     }
 
     .interModal {
-        background-color:#f2f2f2;
+        background-color:#ffd0e7;
         padding: 10px;
         margin: 30px;
         border-radius: 15px;
     }
 
     .classCaracteristicas {
-        background-color:#e1e1e1;
+        background-color:#ffb9db;
         padding: 10px;
         margin: 30px;
         border-radius: 15px;
